# Text-Transformation-Framework

./: .gitignore
GenreTransformation/: README.md  example.py  main.py  requirements.txt
GenreTransformation/configs/: default_config.yaml
GenreTransformation/prompts/: README.md
GenreTransformation/src/: __init__.py  (+1 more)
MCQGeneration/: README.md  eval_all.sh  generate_all.sh  postprocess_all.sh  pyproject.toml
MCQGeneration/data/: README.md
MCQGeneration/prompt/: README.md  android_sec_doc.yaml  attck.yaml  cs161_textbook.yaml  cwe.yaml  d3fend.yaml  default.yaml  default_eval.yaml  mozilla_security.yaml  owasp_mastg.yaml  owasp_wstg.yaml  windows_security.yaml
MCQGeneration/question/: README.md
MCQGeneration/seceval/: convert.py  crawler.py  entity.py  eval.py  llm.py  main.py  postprocess.py  storage.py
MCQGeneration/seceval/loader/: __init__.py  android_sec_doc.py  apple_psec_doc.py  attck.py  cs161_textbook.py  cwe.py  d3fend.py  law.py  mit6858.py  mozilla_security.py  owasp_mastg.py  owasp_wstg.py  win_sec_doc.py
MCQGeneration/seceval/loader/base/: __init__.py  file.py  web.py
MCQGeneration/seceval/parser/: __init__.py  html.py  md.py  pdf.py  text.py  xml.py
MCQGeneration/seceval/question/: generate.py  prompt.py
MCQGeneration/seceval/question/artifact_sampler/: __init__.py  android_sec_doc.py  apple_platform_security.py  attck.py  cs161_textbook.py  cwe.py  d3fend.py  default.py  mozilla_security.py  owasp_mastg.py  owasp_wstg.py  windows_security.py
MCQGeneration/seceval/util/: covert_dataset.py  generate_leaderboard.py  get_gpt_score.py
(+23 files in other folders)
